# ERLI-PRICE-TRACKER

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TUTORIAL.md
infra/docker/: Dockerfile
infra/sql/: init.sql
scripts/: manual_scrape.py  seed_products.py  test_telegram.py
src/: exceptions.py  main.py
src/api/: routes.py  schemas.py
src/bot/: setup.py
src/bot/handlers/: common.py  products.py
src/config/: lexicon.py  settings.py
src/integrations/: __init__.py  ai_router.py  anthropic_client.py  openai_client.py  serper_client.py  telegram_client.py
src/models/: __init__.py  base.py  price_history.py  product.py
src/scheduler/: jobs.py
src/services/: alerter.py  parser.py  price_monitor.py  product_repo.py
tests/: test_ai_router.py  test_api_routes.py  test_exceptions.py  test_parser.py  test_price_monitor.py  test_product_repo.py  test_scheduler_jobs.py  test_scraper.py  test_serper_client.py  test_telegram_client.py
